Changed svgicons2svgfont library for custom one

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "fantasticon",
-  "version": "0.0.0",
-  "description": "Icon font generation tool",
+  "name": "@ramirezcgn/fantasticon",
+  "version": "1.2.0",
+  "description": "Fork of fantasticon that implements a forked version of svgicons2svgfont that support more options than the original.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tancredi/fantasticon.git"
+    "url": "git+https://github.com/ramirezcgn/fantasticon.git"
   },
   "keywords": [
     "icons",
@@ -15,9 +15,9 @@
   ],
   "author": "Tancredi Trugenberger",
   "bugs": {
-    "url": "https://github.com/tancredi/fantasticon/issues"
+    "url": "https://github.com/ramirezcgn/fantasticon/issues"
   },
-  "homepage": "https://github.com/tancredi/fantasticon#readme",
+  "homepage": "https://github.com/ramirezcgn/fantasticon#readme",
   "main": "lib/index.js",
   "bin": {
     "fantasticon": "bin/fantasticon"
@@ -45,7 +45,7 @@
     "handlebars": "^4.7.7",
     "slugify": "^1.6.0",
     "svg2ttf": "^6.0.3",
-    "svgicons2svgfont": "^10.0.3",
+    "@ramirezcgn/svgicons2svgfont": "^10.0.2",
     "ttf2eot": "^3.0.0",
     "ttf2woff": "^3.0.0",
     "ttf2woff2": "^4.0.4"
